Code header comment update

--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!-- Copyright (c) 2021-2026 Stuart Garner -->
-<!-- Licensed under the MIT License -->
+<!-- Licensed under the MIT License: https://github.com/MuskDuck95/admin-hub/blob/main/LICENSE -->
 
 <html xmlns='http://www.w3.org/1999/xhtml' lang='en-AU'>
     <head>
