Clean-up of initial code commit

--- a/source/index.html
+++ b/source/index.html
@@ -15,17 +15,19 @@
     <body>
         <div class='body-container'>
             <div class='header'>
+                <b>Admin Hub</b>
             </div>
             <div class='sidebar'>
                 <div class='sidebar__content-container'>
-                    <div class='sidebar__image-wrapper'>
-                    </div>
                     <div class='sidebar__hyperlink-group-container'>
                     </div>
                     <div class='sidebar__footer-controls-container'>
                         <button id='aboutButton' onclick='aboutButton_ClickEvent()'>
                             About
                         </button>
+                        <a id='helpHyperlink' href='https://stuartgarner.au' rel='noopener noreferrer' target='_blank'>
+                            Help
+                        </a>
                     </div>
                 </div>
             </div>
@@ -260,11 +262,16 @@
                         <button class='about-dialog__close-button' onclick='aboutDialogCloseButton_ClickEvent(this)'>
                         </button>
                     </div>
-                    <div class='about-dialog__title-text'>
+                    <div class="about-dialog__title-text">
+                        Admin Hub v2026.04
                     </div>
-                    <div class='about-dialog__body-text'>
+                    <div class="about-dialog__body-text">
+                        Admin Hub is a lightweight, fully customisable, frontend-only website designed to serve as a dashboard for system administrators. 
                     </div>
-                    <div class='about-dialog__footer-text'>
+                    <div class="about-dialog__footer-text">
+                        <p>Source code hosted on <a href='https://github.com/MuskDuck95/admin-hub' rel='noopener noreferrer' target='_blank'>GitHub</a></p>
+                        <p>Copyright © 2021-2026 Stuart Garner<br>Licensed under the <a href='https://github.com/MuskDuck95/admin-hub/blob/main/LICENSE' rel='noopener noreferrer' target='_blank'>MIT License</a></p>
+                        <p>Uicons by <a href='https://www.flaticon.com/uicons' rel='noopener noreferrer' target='_blank'>Flaticon</a></p>
                     </div>
                 </div>
             </dialog>
