--- a/source/index.html
+++ b/source/index.html
@@ -266,7 +266,7 @@
                         Admin Hub v2026.04
                     </div>
                     <div class="about-dialog__body-text">
-                        Admin Hub is a lightweight, fully customisable, frontend-only website designed to serve as a dashboard for system administrators. 
+                        Admin Hub is a lightweight, fully customisable, frontend-only website that's designed to serve as a dashboard for system administrators.
                     </div>
                     <div class="about-dialog__footer-text">
                         <p>Source code hosted on <a href='https://github.com/MuskDuck95/admin-hub' rel='noopener noreferrer' target='_blank'>GitHub</a></p>
