--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
                         <button id='aboutButton' onclick='aboutButton_ClickEvent()'>
                             About
                         </button>
-                        <a id='helpHyperlink' href='https://stuartgarner.au' rel='noopener noreferrer' target='_blank'>
+                        <a id='helpHyperlink' href='https://stuartgarner.au/admin-hub/' rel='noopener noreferrer' target='_blank'>
                             Help
                         </a>
                     </div>
@@ -270,7 +270,7 @@
                     </div>
                     <div class="about-dialog__footer-text">
                         <p>Source code hosted on <a href='https://github.com/MuskDuck95/admin-hub' rel='noopener noreferrer' target='_blank'>GitHub</a></p>
-                        <p>Copyright © 2021-2026 Stuart Garner<br>Licensed under the <a href='https://github.com/MuskDuck95/admin-hub/blob/main/LICENSE' rel='noopener noreferrer' target='_blank'>MIT License</a></p>
+                        <p>Copyright © 2021-2026 Stuart Garner<br>Licensed under the <a href='https://stuartgarner.au/admin-hub/license/' rel='noopener noreferrer' target='_blank'>MIT License</a></p>
                         <p>Uicons by <a href='https://www.flaticon.com/uicons' rel='noopener noreferrer' target='_blank'>Flaticon</a></p>
                     </div>
                 </div>
