Better config checks for arrays, updated help URL, and created placeholder pages

--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
                         <button id='aboutButton' onclick='aboutButton_ClickEvent()'>
                             About
                         </button>
-                        <a id='helpHyperlink' href='https://stuartgarner.au/admin-hub/' rel='noopener noreferrer' target='_blank'>
+                        <a id='helpHyperlink' href='https://stuartgarner.au/admin-hub/help/' rel='noopener noreferrer' target='_blank'>
                             Help
                         </a>
                     </div>
