--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml' lang='en-AU'>
     <head>
         <meta charset='UTF-8'>
-        <meta name='description' content='Admin Hub is a lightweight, fully customisable, frontend-only website designed to serve as a dashboard for system administrators.'>
+        <meta name='description' content='Admin Hub is a lightweight, fully customisable, frontend-only website that&apos;s designed to serve as a dashboard for system administrators.'>
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <link rel='icon' type='image/x-icon' href='images/favicon.ico'>
         <link rel='stylesheet' href='styles/main.css?v2026.04'>
@@ -13,7 +13,6 @@
     <body>
         <div class='body-container'>
             <div class='header'>
-                <b>Admin Hub</b>
             </div>
             <div class='sidebar'>
                 <div class='sidebar__content-container'>
@@ -264,7 +263,7 @@
                         Admin Hub v2026.04
                     </div>
                     <div class="about-dialog__body-text">
-                        Admin Hub is a lightweight, fully customisable, frontend-only website that's designed to serve as a dashboard for system administrators.
+                        Admin Hub is a lightweight, fully customisable, frontend-only website that&apos;s designed to serve as a dashboard for system administrators.
                     </div>
                     <div class="about-dialog__footer-text">
                         <p>Source code hosted on <a href='https://github.com/MuskDuck95/admin-hub' rel='noopener noreferrer' target='_blank'>GitHub</a></p>
